@@ -1,5 +1,5 @@
 // -*- mode:objc -*-
-// $Id: VT100Screen.m,v 1.89 2003-04-29 17:11:05 yfabian Exp $
+// $Id: VT100Screen.m,v 1.90 2003-05-02 17:37:08 ujwal Exp $
 //
 /*
  **  VT100Screen.m
@@ -685,11 +685,14 @@ static BOOL PLAYBELL = YES;
         //[SESSION setName:token.u.string];
         if (token.type==XTERMCC_WIN_TITLE||token.type==XTERMCC_WINICON_TITLE) 
         {
-            if([[SESSION parent] currentSession] == SESSION)
-                [[[SESSION parent] window] setTitle:token.u.string];
-            [SESSION setName: token.u.string];
+	    //NSLog(@"setting window title to %@", token.u.string);
+	    [SESSION setWindowTitle: token.u.string];
         }
-        if (token.type==XTERMCC_ICON_TITLE||token.type==XTERMCC_WINICON_TITLE) [SESSION setName:token.u.string];
+        if (token.type==XTERMCC_ICON_TITLE||token.type==XTERMCC_WINICON_TITLE)
+	{
+	    //NSLog(@"setting session title to %@", token.u.string);
+	    [SESSION setName:token.u.string];
+	}
         break;
     case XTERMCC_INSBLNK: [self insertBlank:token.u.csi.p[0]]; break;
     case XTERMCC_INSLN: [self insertLines:token.u.csi.p[0]]; break;
